--- a/assets/pages/eagl3r-launcher.html
+++ b/assets/pages/eagl3r-launcher.html
@@ -154,86 +154,86 @@
   <section class="card-container">
     <div class="card">
       <h3>DragonXShadow</h3>
-      <button class="btn" onclick="openEmbed('https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/DragonXShadow.html')">Play</button>
-      <a href="https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/DragonXShadow.html" download><button class="btn">Download</button></a>
+      <button class="btn" onclick="openEmbed('/assets/eagler-versions/DragonXShadow.html')">Play</button>
+      <a href="/assets/eaglercraft-versions/DragonXShadow.html" download><button class="btn">Download</button></a>
     </div>
 
     <div class="card">
       <h3>DragonX V4</h3>
-      <button class="btn" onclick="openEmbed('https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/DragonX_V4.html')">Play</button>
-      <a href="https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/DragonX_V4.html" download><button class="btn">Download</button></a>
+      <button class="btn" onclick="openEmbed('/assets/eaglercraft-versions/DragonX_V4.html')">Play</button>
+      <a href="/assets/eaglercraft-versions/DragonX_V4.html" download><button class="btn">Download</button></a>
     </div>
 
     <div class="card">
       <h3>EaglerReborn</h3>
-      <button class="btn" onclick="openEmbed('https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/EaglerReborn.html')">Play</button>
-      <a href="https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/EaglerReborn.html" download><button class="btn">Download</button></a>
+      <button class="btn" onclick="openEmbed('/assets/eaglercraft-versions/EaglerReborn.html')">Play</button>
+      <a href="/assets/eaglercraft-versions/EaglerReborn.html" download><button class="btn">Download</button></a>
     </div>
 
     <div class="card">
       <h3>Minecraft 1.0.3</h3>
-      <button class="btn" onclick="openEmbed('https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/Minecraft 1.0.3.html')">Play</button>
-      <a href="https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/Minecraft 1.0.3.html" download><button class="btn">Download</button></a>
+      <button class="btn" onclick="openEmbed('/assets/eaglercraft-versions/Minecraft 1.0.3.html')">Play</button>
+      <a href="/assets/eaglercraft-versions/Minecraft 1.0.3.html" download><button class="btn">Download</button></a>
     </div>
 
     <div class="card">
       <h3>Minecraft 1.5.2</h3>
-      <button class="btn" onclick="openEmbed('https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/Minecraft 1.5.2.html')">Play</button>
-      <a href="https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/Minecraft 1.5.2.html" download><button class="btn">Download</button></a>
+      <button class="btn" onclick="openEmbed('/assets/eaglercraft-versions/Minecraft 1.5.2.html')">Play</button>
+      <a href="/assets/eaglercraft-versions/Minecraft 1.5.2.html" download><button class="btn">Download</button></a>
     </div>
 
     <div class="card">
       <h3>Oddfuture Client</h3>
-      <button class="btn" onclick="openEmbed('https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/OddFutureClient.html')">Play</button>
-      <a href="https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/OddFutureClient.html" download><button class="btn">Download</button></a>
+      <button class="btn" onclick="openEmbed('/assets/eaglercraft-versions/OddFutureClient.html')">Play</button>
+      <a href="/assets/eaglercraft-versions/OddFutureClient.html" download><button class="btn">Download</button></a>
     </div>
 
     <div class="card">
       <h3>Pi Client</h3>
-      <button class="btn" onclick="openEmbed('https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/PiClient.html')">Play</button>
-      <a href="https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/PiClient.html" download><button class="btn">Download</button></a>
+      <button class="btn" onclick="openEmbed('/assets/eaglercraft-versions/PiClient.html')">Play</button>
+      <a href="/assets/eaglercraft-versions/PiClient.html" download><button class="btn">Download</button></a>
     </div>
 
     <div class="card">
       <h3>Precision Client</h3>
-      <button class="btn" onclick="openEmbed('https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/PrecisionClient (1).html')">Play</button>
-      <a href="https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/PrecisionClient (1).html" download><button class="btn">Download</button></a>
+      <button class="btn" onclick="openEmbed('/assets/eaglercraft-versions/PrecisionClient (1).html')">Play</button>
+      <a href="/assets/eaglercraft-versions/PrecisionClient (1).html" download><button class="btn">Download</button></a>
     </div>
 
     <div class="card">
       <h3>Shadow Client 3.0 Beta</h3>
-      <button class="btn" onclick="openEmbed('https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/ShadowClient30Beta.html')">Play</button>
-      <a href="https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/ShadowClient30Beta.html" download><button class="btn">Download</button></a>
+      <button class="btn" onclick="openEmbed('/assets/eaglercraft-versions/ShadowClient30Beta.html')">Play</button>
+      <a href="/assets/eaglercraft-versions/ShadowClient30Beta.html" download><button class="btn">Download</button></a>
     </div>
 
     <div class="card">
       <h3>Eagler 1.5</h3>
-      <button class="btn" onclick="openEmbed('https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/eagler1.5.html')">Play</button>
-      <a href="https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/eagler1.5.html" download><button class="btn">Download</button></a>
+      <button class="btn" onclick="openEmbed('/assets/eaglercraft-versions/eagler1.5.html')">Play</button>
+      <a href="/assets/eaglercraft-versions/eagler1.5.html" download><button class="btn">Download</button></a>
     </div>
 
     <div class="card">
       <h3>Eagler 1.8.8</h3>
-      <button class="btn" onclick="openEmbed('https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/eaglercraft.1.8.8.html')">Play</button>
-      <a href="https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/eaglercraft.1.8.8.html" download><button class="btn">Download</button></a>
+      <button class="btn" onclick="openEmbed('/assets/eaglercraft-versions/eaglercraft.1.8.8.html')">Play</button>
+      <a href="/assets/eaglercraft-versions/eaglercraft.1.8.8.html" download><button class="btn">Download</button></a>
     </div>
 
     <div class="card">
       <h3>FuchsiaX Client</h3>
-      <button class="btn" onclick="openEmbed('https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/fuchsiax.html')">Play</button>
-      <a href="https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/fuchsiax.html" download><button class="btn">Download</button></a>
+      <button class="btn" onclick="openEmbed('/assets/eaglercraft-versions/fuchsiax.html')">Play</button>
+      <a href="/assets/eaglercraft-versions/fuchsiax.html" download><button class="btn">Download</button></a>
     </div>
 
     <div class="card">
       <h3>Kerosene Client</h3>
-      <button class="btn" onclick="openEmbed('https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/kerosene.html')">Play</button>
-      <a href="https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/kerosene.html" download><button class="btn">Download</button></a>
+      <button class="btn" onclick="openEmbed('/assets/eaglercraft-versions/kerosene.html')">Play</button>
+      <a href="/assets/eaglercraft-versions/kerosene.html" download><button class="btn">Download</button></a>
     </div>
 
     <div class="card">
       <h3>Nit client</h3>
-      <button class="btn" onclick="openEmbed('https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/nitclient.html')">Play</button>
-      <a href="https://cdn.jsdelivr.net/gh/DominumNetwork/eaglercraft-versions/nitclient.html" download><button class="btn">Download</button></a>
+      <button class="btn" onclick="openEmbed('/assets/eaglercraft-versions/nitclient.html')">Play</button>
+      <a href="/assets/eaglercraft-versions/nitclient.html" download><button class="btn">Download</button></a>
     </div>
   </section>
 
