--- a/assets/pages/extras.html
+++ b/assets/pages/extras.html
@@ -95,7 +95,7 @@
   <button class="extras-btn" onclick="openModal('credits-modal')"><i class="fa-solid fa-star"></i> Credits</button>
   <button class="extras-btn" onclick="openModal('partners-modal')"><i class="fa-solid fa-handshake"></i> Partners</button>
   <button class="extras-btn" onclick="openModal('vortex-modal')"><i class="fa-solid fa-comments"></i> Vortex Chat</button>
-  <button class="extras-btn" href="/assets/pages/eagl3r-launcher.html"><i class="fa-solid fa-comments"></i> Vortex Chat</button>
+  <button class="extras-btn" onclick="openEaglerLauncher()"><i class="fa-solid fa-rocket"></i> Eagler Launcher</button>
 </div>
 <div class="modal" id="credits-modal">
   <div class="modal-content">
@@ -533,6 +533,15 @@ if(name==="custom"){
   Object.entries(t).forEach(([v,k])=>root.style.setProperty(v,k));
 }else Object.entries(themes[name]).forEach(([v,k])=>root.style.setProperty(v,k));
 loadTheme();
+</script>
+<script>
+function openEaglerLauncher() {
+  if (window.parent && window.parent.document.getElementById("content-frame")) {
+    window.parent.document.getElementById("content-frame").src = "/assets/pages/eagl3r-launcher.html";
+  } else {
+    window.location.href = "/assets/pages/eagl3r-launcher.html";
+  }
+}
 </script>
 </body>
 </html>
