--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
     border: none;
     width: 100%;
     height: 100vh;
+    opacity: 1;
+    transition: opacity 0.4s ease; /* smooth fade */
   }
 </style>
 </head>
@@ -89,11 +91,19 @@
   </aside>
 
   <iframe id="content-frame" src="assets/pages/home.html"></iframe>
-
-  <script>
-  function loadPage(page) {
-    document.getElementById("content-frame").src = `assets/pages/${page}.html`;
-  }
+<script>
+function loadPage(page) {
+  const frame = document.getElementById("content-frame");
+  
+  frame.style.opacity = 0;
+  
+  setTimeout(() => {
+    frame.src = `assets/pages/${page}.html`;
+    frame.onload = () => {
+      frame.style.opacity = 1;
+    };
+  }, 300);
+}
 </script>
 <script>  
   const root=document.documentElement;
