--- a/assets/pages/settings.html
+++ b/assets/pages/settings.html
@@ -23,7 +23,7 @@ body{
   background:var(--bg);
   color:var(--text);
   font-family:'Orbitron',sans-serif;
-  overflow:hidden;
+  overflow:scroll;
   height:100vh;width:100vw;
 }
 #particles-js{position:fixed;width:100%;height:100%;top:0;left:0;z-index:0}
