--- a/assets/pages/settings.html
+++ b/assets/pages/settings.html
@@ -24,7 +24,8 @@ body{
   color:var(--text);
   font-family:'Orbitron',sans-serif;
   overflow:scroll;
-  height:100vh;width:100vw;
+  min-height:100vh;
+  width:100vw;
 }
 #particles-js{position:fixed;width:100%;height:100%;top:0;left:0;z-index:0}
 .content{
