--- a/assets/pages/settings.html
+++ b/assets/pages/settings.html
@@ -19,18 +19,28 @@
   --card-bg: rgba(255,255,255,0.03);
 }
 *{box-sizing:border-box;margin:0;padding:0}
-body{
-  background:var(--bg);
-  color:var(--text);
-  font-family:'Orbitron',sans-serif;
-  overflow:scroll;
-  min-height:100vh;
-  width:100vw;
+body {
+  background: var(--bg);
+  color: var(--text);
+  font-family: 'Orbitron', sans-serif;
+  min-height: 100vh;
+  width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 #particles-js{position:fixed;width:100%;height:100%;top:0;left:0;z-index:0}
-.content{
-  position:relative;z-index:1;display:flex;flex-direction:column;
-  align-items:center;justify-content:center;height:100vh;text-align:center;padding:0 20px;
+.content {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  min-height: 100vh;
+  text-align: center;
+  padding: 60px 20px;
 }
 h1{color:var(--accent);font-size:2.5em;margin-bottom:30px}
 .setting-box{
