--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     width: 100%;
     height: 100vh;
     opacity: 1;
-    transition: opacity 0.4s ease; /* smooth fade */
+    transition: opacity 0.4s ease;
   }
 </style>
 </head>
@@ -90,6 +90,7 @@
   </aside>
 
   <iframe id="content-frame" src="assets/pages/home.html"></iframe>
+
 <script>
 function loadPage(page) {
   const frame = document.getElementById("content-frame");
@@ -104,27 +105,17 @@ function loadPage(page) {
   }, 300);
 }
 </script>
-<script>  
-  const root=document.documentElement;
-const themes={
-  default:{"--bg":"#0b0a16","--accent":"#7a5cff","--blue":"#00bfff","--text":"#e6e6ff",
-           "--surface":"rgba(255,255,255,0.05)","--border":"rgba(255,255,255,0.1)","--card-bg":"rgba(255,255,255,0.03)"},
-  cyber:{"--bg":"#050c1b","--accent":"#39ff14","--blue":"#00ffff","--text":"#e0ffe0",
-         "--surface":"rgba(0,255,0,0.05)","--border":"rgba(0,255,0,0.1)","--card-bg":"rgba(0,255,0,0.03)"},
-  sunset:{"--bg":"#1a0b0b","--accent":"#ff6f61","--blue":"#ffa500","--text":"#fff0e6",
-          "--surface":"rgba(255,110,100,0.05)","--border":"rgba(255,110,100,0.1)","--card-bg":"rgba(255,110,100,0.03)"},
-  neon:{"--bg":"#0f0020","--accent":"#ff00ff","--blue":"#00ffff","--text":"#ffffff",
-        "--surface":"rgba(255,0,255,0.05)","--border":"rgba(255,0,255,0.1)","--card-bg":"rgba(255,0,255,0.03)"},
-  darkred:{"--bg":"#1b0000","--accent":"#ff0000","--blue":"#cc0000","--text":"#ffe6e6",
-           "--surface":"rgba(255,0,0,0.05)","--border":"rgba(255,0,0,0.1)","--card-bg":"rgba(255,0,0,0.03)"},
-    dnv2:{"--bg": "#050007","--accent": "#ff00de","--blue": "#00fff7","--text": "#ffffff",
-         "--surface": "rgba(255, 0, 255, 0.05)","--border": "rgba(255, 0, 255, 0.15)","--card-bg": "rgba(15, 0, 30, 0.7)"}
-};
 
-function loadPage(page){
-  const frame=document.getElementById("content-frame");
-  frame.src=`assets/pages/${page}.html`;
-}
+<script>
+const root = document.documentElement;
+const themes = {
+  default: {"--bg":"#0b0a16","--accent":"#7a5cff","--blue":"#00bfff","--text":"#e6e6ff"},
+  cyber: {"--bg":"#050c1b","--accent":"#39ff14","--blue":"#00ffff","--text":"#e0ffe0"},
+  sunset: {"--bg":"#1a0b0b","--accent":"#ff6f61","--blue":"#ffa500","--text":"#fff0e6"},
+  neon: {"--bg":"#0f0020","--accent":"#ff00ff","--blue":"#00ffff","--text":"#ffffff"},
+  darkred: {"--bg":"#1b0000","--accent":"#ff0000","--blue":"#cc0000","--text":"#ffe6e6"},
+  dnv2: {"--bg":"#050007","--accent":"#ff00de","--blue":"#00fff7","--text":"#ffffff"}
+};
 
 function applyTheme(theme){
   Object.entries(theme).forEach(([v,k])=>root.style.setProperty(v,k));
@@ -139,26 +130,42 @@ function loadTheme(){
   if(name==="custom"){
     const t=JSON.parse(localStorage.getItem("dominum-custom-theme")||"{}");
     applyTheme(t);
-  }else applyTheme(themes[name]);
+  } else applyTheme(themes[name]);
 }
 
-  if(name==="custom"){
-    const t=JSON.parse(localStorage.getItem("dominum-custom-theme")||"{}");
-    Object.entries(t).forEach(([v,k])=>root.style.setProperty(v,k));
-  }else Object.entries(themes[name]).forEach(([v,k])=>root.style.setProperty(v,k));
-  document.addEventListener("DOMContentLoaded", () => {
-  if (!localStorage.getItem("dominum-panic-key")) localStorage.setItem("dominum-panic-key", "`");
-  if (!localStorage.getItem("dominum-panic-link")) localStorage.setItem("dominum-panic-link", "https://google.com/");
+loadTheme();
+</script>
+<script>
+(function(){
+  function getCookie(name){
+    const match = document.cookie.match(new RegExp('(^| )' + name + '=([^;]+)'));
+    return match ? decodeURIComponent(match[2]) : null;
+  }
+
+  const cloakData = getCookie("dominum-cloak");
+  if (cloakData) {
+    try {
+      const { title, icon } = JSON.parse(cloakData);
+      if (title) document.title = title;
+      if (icon) {
+        let link = document.querySelector("link[rel='icon']") || document.createElement("link");
+        link.rel = "icon";
+        link.href = icon;
+        document.head.appendChild(link);
+      }
+    } catch (e) {
+      console.warn("Invalid cloak data:", e);
+    }
+  }
 
   document.addEventListener("keydown", e => {
-    const key = localStorage.getItem("dominum-panic-key");
-    const link = localStorage.getItem("dominum-panic-link");
-    if (key && link && e.key.toLowerCase() === key.toLowerCase()) {
+    const key = (getCookie("dominum-panic-key") || "`").toLowerCase();
+    const link = getCookie("dominum-panic-link") || "https://google.com/";
+    if (e.key.toLowerCase() === key) {
       window.location.href = link;
     }
   });
-});
-loadTheme();
+})();
 </script>
 </body>
 </html>
