--- a/assets/pages/settings.html
+++ b/assets/pages/settings.html
@@ -161,45 +161,107 @@ particlesJS("particles-js", {
   "modes":{"repulse":{"distance":100}}},"retina_detect":true
 });
 
-const root=document.documentElement;
-const themes={
-  default:{"--bg":"#0b0a16","--accent":"#7a5cff","--blue":"#00bfff","--text":"#e6e6ff"},
-  cyber:{"--bg":"#050c1b","--accent":"#39ff14","--blue":"#00ffff","--text":"#e0ffe0"},
-  sunset:{"--bg":"#1a0b0b","--accent":"#ff6f61","--blue":"#ffa500","--text":"#fff0e6"},
-  neon:{"--bg":"#0f0020","--accent":"#ff00ff","--blue":"#00ffff","--text":"#ffffff"},
-  darkred:{"--bg":"#1b0000","--accent":"#ff0000","--blue":"#cc0000","--text":"#ffe6e6"},
-  dnv2:{"--bg":"#050007","--accent":"#ff00de","--blue":"#00fff7","--text":"#ffffff"}
-};
-function applyTheme(theme){ Object.entries(theme).forEach(([v,k])=>root.style.setProperty(v,k)); }
-function saveTheme(name,custom){
-  setCookie("dominum-theme",name);
-  if(custom) setCookie("dominum-custom-theme",JSON.stringify(custom));
-}
-function loadTheme(){
-  const name=getCookie("dominum-theme")||"default";
-  if(name==="custom"){
-    const t=JSON.parse(getCookie("dominum-custom-theme")||"{}");
-    applyTheme(t);
-  } else applyTheme(themes[name]);
-  document.getElementById("theme").value=name;
-}
-document.getElementById("theme").onchange=e=>{
-  if(e.target.value==="custom"){
-    document.getElementById("custom-theme-inputs").style.display="block";
-  }else{
-    document.getElementById("custom-theme-inputs").style.display="none";
-    applyTheme(themes[e.target.value]);
-    saveTheme(e.target.value);
-  }
-};
-document.getElementById("saveCustom").onclick=()=>{
-  const custom={
-    "--bg":bgColor.value,"--accent":accentColor.value,"--blue":blueColor.value,"--text":textColor.value
-  };
-  applyTheme(custom);
-  saveTheme("custom",custom);
+const root = document.documentElement;
+const themes = {
+    default: {
+        "--bg": "#0b0a16",
+        "--accent": "#7a5cff",
+        "--blue": "#00bfff",
+        "--text": "#e6e6ff",
+        "--surface": "rgba(255,255,255,0.05)",
+        "--border": "rgba(255,255,255,0.1)",
+        "--card-bg": "rgba(255,255,255,0.03)"
+    },
+    cyber: {
+        "--bg": "#050c1b",
+        "--accent": "#39ff14",
+        "--blue": "#00ffff",
+        "--text": "#e0ffe0",
+        "--surface": "rgba(0,255,0,0.05)",
+        "--border": "rgba(0,255,0,0.1)",
+        "--card-bg": "rgba(0,255,0,0.03)"
+    },
+    sunset: {
+        "--bg": "#1a0b0b",
+        "--accent": "#ff6f61",
+        "--blue": "#ffa500",
+        "--text": "#fff0e6",
+        "--surface": "rgba(255,110,100,0.05)",
+        "--border": "rgba(255,110,100,0.1)",
+        "--card-bg": "rgba(255,110,100,0.03)"
+    },
+    neon: {
+        "--bg": "#0f0020",
+        "--accent": "#ff00ff",
+        "--blue": "#00ffff",
+        "--text": "#ffffff",
+        "--surface": "rgba(255,0,255,0.05)",
+        "--border": "rgba(255,0,255,0.1)",
+        "--card-bg": "rgba(255,0,255,0.03)"
+    },
+    darkred: {
+        "--bg": "#1b0000",
+        "--accent": "#ff0000",
+        "--blue": "#cc0000",
+        "--text": "#ffe6e6",
+        "--surface": "rgba(255,0,0,0.05)",
+        "--border": "rgba(255,0,0,0.1)",
+        "--card-bg": "rgba(255,0,0,0.03)"
+    },
+    dnv2: {
+        "--bg": "#050007",
+        "--accent": "#ff00de",
+        "--blue": "#00fff7",
+        "--text": "#ffffff",
+        "--surface": "rgba(255, 0, 255, 0.05)",
+        "--border": "rgba(255, 0, 255, 0.15)",
+        "--card-bg": "rgba(15, 0, 30, 0.7)"
+    }
 };
 
+function applyTheme(theme) {
+    Object.entries(theme).forEach(([v, k]) => root.style.setProperty(v, k));
+    try {
+        if (window.parent && window.parent !== window) {
+            Object.entries(theme).forEach(([v, k]) => window.parent.document.documentElement.style.setProperty(v, k));
+        }
+    } catch (e) {}
+}
+
+function saveTheme(themeName, custom) {
+    localStorage.setItem("dominum-theme", themeName);
+    if (custom) localStorage.setItem("dominum-custom-theme", JSON.stringify(custom));
+}
+
+function loadTheme() {
+    const name = localStorage.getItem("dominum-theme") || "default";
+    if (name === "custom") {
+        const t = JSON.parse(localStorage.getItem("dominum-custom-theme") || "{}");
+        applyTheme(t);
+    } else applyTheme(themes[name]);
+    document.getElementById("theme").value = name;
+}
+document.getElementById("theme").onchange = e => {
+    if (e.target.value === "custom") {
+        document.getElementById("custom-theme-inputs").style.display = "block";
+    } else {
+        document.getElementById("custom-theme-inputs").style.display = "none";
+        applyTheme(themes[e.target.value]);
+        saveTheme(e.target.value);
+        if (window.parent && window.parent.loadTheme) window.parent.loadTheme();
+    }
+};
+document.getElementById("saveCustom").onclick = () => {
+    const custom = {
+        "--bg": bgColor.value,
+        "--accent": accentColor.value,
+        "--blue": blueColor.value,
+        "--text": textColor.value
+    };
+    applyTheme(custom);
+    saveTheme("custom", custom);
+    if (window.parent && window.parent.loadTheme) window.parent.loadTheme();
+};
 document.getElementById("openAboutBlank").onclick=()=>{
   const win=window.open("about:blank","_blank");
   const iframe=win.document.createElement("iframe");
