--- a/assets/pages/settings.html
+++ b/assets/pages/settings.html
@@ -123,7 +123,7 @@ button:hover{
       <label>or Image URL</label>
       <input type="url" id="customIconURL" placeholder="https://example.com/favicon.png">
     </div>
-    <button id="saveCloak">Save Tab Cloak</button>
+    <button id="saveCloak">Save Tab Cloak (Requires Reload)</button>
   </div>
 
   <div class="setting-box">
