added axiom proxy to the partners :)

--- a/assets/pages/extras.html
+++ b/assets/pages/extras.html
@@ -340,6 +340,14 @@
         <p class="desc">Every day is a new chance to improve and build more immersive digital experiences.</p>
       </div>
     </div>
+    <div class="card" onclick="handlePartnerClick('Axiom Proxy','Arson (imdonewithdc)','An amazing webos proxy with a sleek feeling.','/assets/images/partners/axiom.png','https://discord.gg/A2AZb8SgCD','https://cars.axiomsontop.shop/')">
+      <img src="/assets/images/partners/axiom.png" alt="Partner Logo">
+      <div class="card-content">
+        <h3>Axiom Proxy</h3>
+        <p class="role">Owned by: Arson (imdonewithdc)</p>
+        <p class="desc">An amazing webos proxy with a sleek feeling.</p>
+      </div>
+    </div>
   </div>
 </div>
 <div class="modal" id="profile-modal">
