more theme fixes I guess..

--- a/assets/pages/settings.html
+++ b/assets/pages/settings.html
@@ -58,7 +58,7 @@ select,input[type="color"],input[type="text"],input[type="url"],button,input[typ
   padding:10px;
   border:none;
   border-radius:8px;
-  background:rgba(255,255,255,0.07);
+  background:rgba(255, 255, 255, 0.824);
   color:var(--text);
   font-family:'Orbitron',sans-serif;
   outline:none;
@@ -74,6 +74,12 @@ button:hover{
   border-color:var(--blue);
   color:var(--blue);
   box-shadow:0 0 10px var(--blue);
+}
+
+.select, #tabCloakPreset, #theme {
+  background-color: var(--bg);
+  border-radius:8px;
+  color: var(--text);
 }
 </style>
 </head>
