--- a/assets/pages/settings.html
+++ b/assets/pages/settings.html
@@ -53,16 +53,6 @@ h1{color:var(--accent);font-size:2.5em;margin-bottom:30px}
   margin-bottom:25px;
 }
 label{display:block;margin-bottom:8px;color:var(--blue)}
-select,input[type="color"],input[type="text"],input[type="url"],button,input[type="file"]{
-  width:100%;
-  padding:10px;
-  border:none;
-  border-radius:8px;
-  background:rgba(255, 255, 255, 0.824);
-  color:var(--text);
-  font-family:'Orbitron',sans-serif;
-  outline:none;
-}
 button{
   margin-top:10px;
   border:1px solid var(--accent);
@@ -76,10 +66,56 @@ button:hover{
   box-shadow:0 0 10px var(--blue);
 }
 
-.select, #tabCloakPreset, #theme {
-  background-color: var(--bg);
-  border-radius:8px;
+select,
+input[type="color"],
+input[type="text"],
+input[type="url"], 
+button,
+input[type="file"] {
+  width: 100%;
+  padding: 10px 14px;
+  border: 2px solid var(--accent);
+  border-radius: 12px;
+  background: rgba(255, 255, 255, 0.06);
   color: var(--text);
+  font-family: 'Orbitron', sans-serif;
+  font-size: 0.95em;
+  outline: none;
+  transition: all 0.25s ease;
+  appearance: none;
+}
+
+select {
+  background: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 0.05),
+    rgba(0, 0, 0, 0.15)
+  );
+}
+
+select:hover,
+select:focus,
+input[type="color"]:hover,
+input[type="text"]:focus,
+input[type="url"]:focus {
+  border-color: var(--blue);
+  box-shadow: 0 0 10px var(--accent);
+  background: rgba(255, 255, 255, 0.1);
+}
+
+select {
+  background-image: linear-gradient(45deg, transparent 50%, var(--accent) 50%),
+                    linear-gradient(135deg, var(--accent) 50%, transparent 50%);
+  background-position: calc(100% - 20px) calc(1em + 2px),
+                       calc(100% - 15px) calc(1em + 2px);
+  background-size: 5px 5px, 5px 5px;
+  background-repeat: no-repeat;
+}
+
+.setting-box label {
+  margin-bottom: 6px;
+  display: block;
+  color: var(--blue);
 }
 </style>
 </head>
