--- a/assets/pages/settings.html
+++ b/assets/pages/settings.html
@@ -86,31 +86,50 @@ input[type="file"] {
 }
 
 select {
-  background: linear-gradient(
-    135deg,
-    rgba(255, 255, 255, 0.05),
-    rgba(0, 0, 0, 0.15)
-  );
+  width: 100%;
+  padding: 10px 14px;
+  border: 2px solid var(--accent);
+  border-radius: 12px;
+  background-color: rgba(255, 255, 255, 0.05);
+  color: var(--text);
+  font-family: 'Orbitron', sans-serif;
+  font-size: 0.95em;
+  outline: none;
+  transition: all 0.25s ease;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  cursor: pointer;
 }
 
 select:hover,
-select:focus,
-input[type="color"]:hover,
-input[type="text"]:focus,
-input[type="url"]:focus {
+select:focus {
   border-color: var(--blue);
-  box-shadow: 0 0 10px var(--accent);
-  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 8px var(--accent);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 select {
   background-image: linear-gradient(45deg, transparent 50%, var(--accent) 50%),
                     linear-gradient(135deg, var(--accent) 50%, transparent 50%);
-  background-position: calc(100% - 20px) calc(1em + 2px),
-                       calc(100% - 15px) calc(1em + 2px);
-  background-size: 5px 5px, 5px 5px;
+  background-position: calc(100% - 18px) center,
+                       calc(100% - 12px) center;
+  background-size: 6px 6px, 6px 6px;
   background-repeat: no-repeat;
+  padding-right: 30px;
 }
+
+select option {
+  background-color: var(--bg);
+  color: var(--text);
+}
+
+select option:hover,
+select option:checked {
+  background-color: var(--accent);
+  color: var(--bg);
+}
+
 
 .setting-box label {
   margin-bottom: 6px;
