--- a/404.html
+++ b/404.html
@@ -95,7 +95,7 @@
   <p>if you were using the proxy, just press reload.</p>
   <div class="buttons">
     <button onclick="location.reload()"><i class="fa-solid fa-rotate-right"></i> Reload</button>
-    <a href="/"><i class="fa-solid fa-house"></i> Return Home</a>
+    <a href="/assets/pages/home.html"><i class="fa-solid fa-house"></i> Return Home</a>
   </div>
 </div>
 <!-- particles! yay! -->
