--- a/assets/pages/extras.html
+++ b/assets/pages/extras.html
@@ -324,7 +324,7 @@
         <p class="desc">Cooking up games for your entertainment.</p>
       </div>
     </div>
-    <div class="card" onclick="handlePartnerClick('Bloxcraft','Bloxcraft Studios','An unblocked games site you can play every day.','/assets/images/partners/bloxcraft.png','https://discord.gg/a65hcbpfct','https://bloxcraft-ubg.pages.dev/')">
+    <div class="card" onclick="handlePartnerClick('Bloxcraft','Bloxcraft Studios','An unblocked games site you can play every day.','/assets/images/partners/bloxcraft.png','https://discord.gg/sqPFYEsz8F','https://bloxcraft-ubg.pages.dev/')">
       <img src="/assets/images/partners/bloxcraft.png" alt="Partner Logo">
       <div class="card-content">
         <h3>Bloxcraft</h3>
