--- a/assets/pages/gam3-ports.html
+++ b/assets/pages/gam3-ports.html
@@ -152,11 +152,11 @@ const gameTitle = document.getElementById('gameTitle');
 const fullscreenBtn = document.getElementById('fullscreenBtn');
 
 const zonesURLs = [
-  "https://cdn.jsdelivr.net/gh/DominumNetwork/game-ports@main/game-ports.json"
+  "https://cdn.jsdelivr.net/gh/DominumNetwork/assets@main/zones.json"
 ];
 
-const coverURL = "https://cdn.jsdelivr.net/gh/DominumNetwork/game-ports@main/covers";
-const htmlURL  = "https://cdn.jsdelivr.net/gh/DominumNetwork/game-ports@main";
+const coverURL = "https://cdn.jsdelivr.net/gh/DominumNetwork/covers@main/";
+const htmlURL  = "https://cdn.jsdelivr.net/gh/DominumNetwork/html@main";
 
 let zones = [];
 let zonesURL = zonesURLs[Math.floor(Math.random() * zonesURLs.length)];
